Modified id and class labels
Modified labels to include general and specific sections

--- a/index.html
+++ b/index.html
@@ -12,34 +12,112 @@
     <h1>Allison's Eats</h1>
     <p id="open_statement">
       Have you ever wanted to make delicious homemade meals but lack the time and energy?
-      Well say no more--below are several of my tried-and-true recipes for any occasion.
+      Or have you wanted tips or to learn new cooking techniques?
+      Well say no more! Below are several of my tried-and-true recipes for any occasion in addition
+      to several different techniques for different recipes.
       Although some require more effort, most are easy and simple to whip up in no time.
       Bon appetit!</p>
 </div>
 
-<div class="featured">
+<div class="gen_section" id="featured">
   <h2>Featured Recipe's</h2>
-  <div class="first">
-    <p>Chocolate Lava Cake's<br />
-    <small>This recipe makes 2, 4, or 6 molten chocolate lava cakes in minutes.</small></p>
-  </div>
-  <div class="second">
-    <p>Glazed Carrots<br />
-    <small>A quick an easy vegetable recipe.</small></p>
-  </div>
-  <div class="third">
-    <p>Mother's Crab Fettucine Alfredo<br />
-    <small>A delicious and simple recipe from my mother to please everyone.</small></p>
-  </div>
+  <table class="gen_table" id="featured_table">
+    <tbody>
+      <tr>
+        <td>
+          <a href="URL"><img src="URL"></a>
+          <p>Chocolate Lava Cake's<br />
+          <small>This recipe makes 2, 4, or 6 molten chocolate lava cakes in minutes.</small></p>
+        </td>
+        <td>
+          <a href="URL"><img src="URL"></a>
+          <p>Glazed Carrots<br />
+          <small>A quick an easy vegetable recipe.</small></p>
+        </td>
+        <td>
+          <a href="URL"><img src="URL"></a>
+          <p>Mother's Crab Fettucine Alfredo<br />
+          <small>A delicious and simple recipe from my mother to please everyone.</small></p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 <br />
-<div class="catalogue">
+
+<div class="gen_section" id="catalogue">
   <h2>Recipe Catalogue</h2>
   <p>Below are some of my favorite recipe's.</p>
-  <h3>Breakfast</h3>
-  <h3>Lunch</h3>
-  <h3>Dinner</h3>
-  <h3>Snacks & Appetizers</h3>
+  <h3 class="breakfast">Breakfast</h3>
+    <table class="gen_table">
+      <tbody>
+        <tr>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+        </tr>
+      </tbody>
+    </table>
+  <h3 class="lunch">Lunch</h3>
+    <table class="gen_table">
+      <tbody>
+        <tr>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+        </tr>
+      </tbody>
+    </table>
+  <h3 class="dinner">Dinner</h3>
+    <table class="gen_table">
+      <tbody>
+        <tr>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+        </tr>
+      </tbody>
+    </table>
+  <h3 class="snacks_apps">Snacks & Appetizers</h3>
+    <table class="gen_table">
+      <tbody>
+        <tr>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+          <td><a href="URL"><img src="URL" /></a></td>
+        </tr>
+      </tbody>
+    </table>
+</div>
+<br />
+
+<div class="gen_section" id="techniques">
+  <h2>Cooking Techniques</h2>
+  <table class="gen_table" id="techniques_table">
+    <tbody>
+      <tr>
+        <td>
+          <a href="URL"><img src="URL" /></a>
+          <p>Technique 1<br />
+          <small>Text...</small></p>
+        </td>
+        <td>
+          <a href="URL"><img src="URL" /></a>
+          <p>Technique 2<br />
+          <small>Text...</small></p>
+        </td>
+        <td>
+          <a href="URL"><img src="URL" /></a>
+          <p>Technique 3<br />
+          <small>Text 3...</small></p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 </body>
 
